Added loot table as well as xp drop to the mob